force-app/main/default/objects/Account/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <label>Customer Reference Number</label>
    <description>Unique reference number assigned to the customer for tracking and identification purposes</description>
    <inlineHelpText>Enter the unique reference number provided by the customer. This is used for cross-referencing with external systems.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
</CustomField>