force-app/main/default/objects/Account/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <label>Preferred Contact Method</label>
    <description>Indicates the customer's preferred method of communication for business correspondence</description>
    <inlineHelpText>Specify how the customer prefers to be contacted (e.g., Email, Phone, SMS, Mail). This helps ensure effective communication.</inlineHelpText>
    <type>Text</type>
    <length>50</length>
</CustomField>