force-app/main/default/objects/Account/fields/Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Test_Account__c</fullName>
    <label>Test Account</label>
    <description>To identify Accounts created for Testing Purpose</description>
    <inlineHelpText>Check this box to mark this account as a test account created for testing purposes. This field cannot be modified after the account is created.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>