force-app/main/default/objects/Account/validationRules/Prevent_Test_Account_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Test_Account_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Test_Account__c)
)</errorConditionFormula>
    <errorDisplayField>Test_Account__c</errorDisplayField>
    <errorMessage>The Test Account field cannot be modified after the account is created.</errorMessage>
</ValidationRule>